fix: spacing in footer for touch devices

--- a/stylesheets/components/_infoblock.scss
+++ b/stylesheets/components/_infoblock.scss
@@ -18,6 +18,7 @@
     }
 
     &--link {
+      padding: .5rem 0;
       &:hover {
         text-decoration: underline;
       }
@@ -27,5 +28,15 @@
       @include fg(dark_grey);
       @extend .text-xs;
     }
+  }
+}
+
+@include xl {
+  .infoblock {
+    &__text {
+      &--link {
+      padding: 0;
+    }
+  }
   }
 }
