--- a/stylesheets/components/_link-list.scss
+++ b/stylesheets/components/_link-list.scss
@@ -40,7 +40,3 @@
         }
     }
 }
-
-* {
-    // outline: .5px solid red !important;
-}
